--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -44,7 +44,8 @@
         color: $secondary;
         font-weight: 600;
         font-size: rem(20px);
-        margin: 1.5em 0;
+        margin-top: 1.25em;
+        margin-bottom: 1em;
 
         &:hover {
             color: $highlight;
@@ -54,16 +55,21 @@
 
     &__text {
         line-height: 1.5;
+        margin: 0.5em 0;
     }
 
     &__flex {
         display: flex;
         justify-content: space-between;
-        padding-top: 0.5em;
     }
 
     &__eth {
         color: $highlight;
+        font-size: rem(16px);
+    }
+
+    &__timer {
+        font-size: rem(16px);
     }
 
     &__eth::before {
